2008-04-12  Jonathon Jongsma  <jjongsma@gnome.org>

	* src/gtkhex.c (draw_shadow): remove the call to gdk_window_clear_area()
	since it can sometimes result in the background between the hex and ascii
	widgets becoming dark black.  Fixes Bug #527279

2008-04-10  Jonathon Jongsma  <jjongsma@gnome.org>

	* src/Makefile.am: set G_LOG_DOMAIN for the shared libgtkhex library so that
	warning messages use the right domain

2008-04-10  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.in: Up version to 2.22.0 for release

2008-02-26  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.in: Up version to 2.21.92 for release

2008-02-26  Rodney Dawes  <dobey.pwns@gmail.com>

	* src/ghex-window.c (ghex_window_new):
	Pass DATADIR instead of PREFIX to bonobo_ui_util_set_ui
	Patch from Yuriy Penkin <yura.penkin@gmail.com>

	Fixes #515425

2008-01-30  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.in: Up version to 2.21.90 for release

2008-01-30  Rodney Dawes  <dobey.pwns@gmail.com>

	* Makefile.am: Use GCONF_SCHEMA_FILE_DIR for schemadir

	Fixes #511529

2007-12-21  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.in:
	* gtkhex.pc.in:
	Use the same version number for libgtkhex as ghex itself

2007-12-21  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.in: Up version to 2.21.4 for release

2007-11-30  Jonathon Jongsma  <jjongsma@gnome.org>

	* src/gtkhex.c:
	* src/gtkhex.h: add API to set a starting offset address.  In some ways it
	seems that this information is a property of the document rather than the
	view, but the GtkHex widget does all of the offset-related stuff, so I put
	it here.  This is useful for using this widget as a debugger memory editor
	since we'll only read a small amount of memory from gdb and we want to be
	able to label the rows with the correct address.  Fix for bug #465137

2007-11-30  Jonathon Jongsma  <jjongsma@gnome.org>

	* src/gtkhex.c:
	* src/gtkhex.h: connect to the HexDocument's document_changed signal and